<resources>
    <string name="app_name">DeskeraAssignment</string>
    <string name="title_profile">Profile</string>
    <string name="title_items">Items</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_table">Table</string>
    <string name="title_setting">Setting</string>
    <string name="title_viewdetails">View Details</string>
    <string name="title_edit">Edit</string>
    <string name="title_search">Search</string>
    <string name="title_farhenheit">Farhenheit</string>
    <string name="title_celcius">Celcius</string>
    <string name="title_add">Add</string>
    <string name="title_editsave">Edit/Save</string>
    <string name="title_select">Chose Temperature Display Unit</string>
    <string name="title_enteritemname">Item Name</string>
    <string name="title_enteritemdesc">Item Description</string>
    <string name="title_enteritemcateg">Item Category</string>
</resources>
