<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_perm_identity_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_items"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_items" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_star_border_black_24dp"
        android:title="@string/title_favourites" />

    <item
        android:id="@+id/navigation_table"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/title_table" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_setting" />

</menu>
