<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:id="@+id/linearlayoutHeader"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_edit"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:id="@+id/tv_edit"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_table"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_centerInParent="true"
            android:gravity="center"/>
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_add_black_24dp"
            android:layout_marginRight="10dp"
            android:id="@+id/ib_add"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayoutHeader"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/relativelayoutSearch">
        <EditText
            android:id="@+id/autoCompleteTextViewSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/title_search"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:padding="12dp"
            android:layout_marginLeft="40dp"
            android:background="@android:color/transparent"
            android:imeOptions="actionSearch"
            android:inputType="text"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/ic_search_black_24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"/>
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_viewItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_below="@id/relativelayoutSearch" />
</RelativeLayout>
